@@ -1,3 +1,9 @@
+2007-02-21  Jb Evain  <jbevain@gmail.com>
+
+	* Mono.Cecil/ReflectionReader.cs:
+		Handle fields TypeSpecs that have an initial value.
+		Based on a patch by Argiris Kirtzidis <akyrtzi@gmail.com>
+
 2007-01-29  Jb Evain  <jbevain@gmail.com>
 
 	* Mono.Cecil.Metadata/MetadataWriter.cs:
